Fix tag names
